--- a/src/color.sass
+++ b/src/color.sass
@@ -1,16 +1,16 @@
 @import './variables.sass'
 
-.bgprimary
+.bg-primary
   background: $primary
 
-.bgsuccess
+.bg-success
   background: $success
 
-.bgwarning
+.bg-warning
   background: $warning
 
-.bgdanger
+.bg-danger
   background: $danger
 
-.bgdefault
+.bg-default
   background: $default
