Create button file

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,5 @@
-@import './color.sass'
-@import './spacing.sass'
-@import './grid.sass'
+@import './color'
+@import './spacing'
+@import './grid'
+
+@import './components/button'
