Add button link

--- a/src/components/button.sass
+++ b/src/components/button.sass
@@ -7,6 +7,7 @@ button
   
 button:hover
   box-shadow: 0px 0px 5px black
+  cursor: pointer
 
 button.sm
   padding: .25rem
@@ -15,3 +16,8 @@ button.sm
 button.lg
   padding: 1rem
   font-size: 1rem
+
+button.link
+  text-decoration: underline
+  background: none
+  box-shadow: none
