--- a/src/color.sass
+++ b/src/color.sass
@@ -17,3 +17,18 @@
 
 .text-white
   color: white
+
+.text-primary
+  color: $primary
+
+.text-success
+  color: $success
+
+.text-warning
+  color: $warning
+
+.text-danger
+  color: $danger
+
+.text-default
+  color: $default
