--- a/src/color.sass
+++ b/src/color.sass
@@ -15,6 +15,9 @@
 .bg-default
   background: $default
 
+.bg-black
+  background: $black
+
 .text-white
   color: white
 
@@ -32,3 +35,6 @@
 
 .text-default
   color: $default
+
+.text-black
+  color: $black
