--- a/src/variables.sass
+++ b/src/variables.sass
@@ -6,4 +6,4 @@ $default: #ecf0f1
 
 $black: #2c3031
 
-$sizes: xs 576px, sm 768px, md 992px, lg 1200px
+$screensize: xs 576px, sm 768px, md 992px, lg 1200px
