--- a/src/variables.sass
+++ b/src/variables.sass
@@ -7,3 +7,6 @@ $default: #ecf0f1
 $black: #2c3031
 
 $screensize: xs 576px, sm 768px, md 992px, lg 1200px
+
+$textsize: lg 2rem, md 1rem, sm .75rem
+$textalign: center, left, right, justify
