--- a/src/variables.sass
+++ b/src/variables.sass
@@ -10,3 +10,6 @@ $screensize: xs 576px, sm 768px, md 992px, lg 1200px
 
 $textsize: lg 2rem, md 1rem, sm .75rem
 $textalign: center, left, right, justify
+
+$paddingtype: pa, pt -top, pr -right, pl -left, pb -bottom
+$margintype: ma, mt -top, mr -right, ml -left, mb -bottom
