--- a/src/variables.sass
+++ b/src/variables.sass
@@ -1,12 +1,12 @@
-$primary:#3498db
-$success: #2ecc71
-$warning: #f1c40f
-$danger: #e74c3c
-$default: #ecf0f1
+$colors: -aqua #7FDBFF, -blue #0074D9, -navy #001F3F, -teal #39CCCC, -green #2ECC40, -olive #3D9970, -lime #01FF70, -yellow #FFDC00, -orange #FF851B, -red #FF4136, -fuchsia #F012BE, -purple #B10DC9, -maroon #85144B, -white #FFFFFF, -silver #DDDDDD, -gray #AAAAAA, -black #111111
 
-$black: #2c3031
+$primary: #0074D9
+$success: #2ECC40
+$warning: #FFDC00
+$danger: #FF4136
+$default: #AAAAAA
 
-$screensize: xs 576px, sm 768px, md 992px, lg 1200px
+$screensize: xs 576px, sm 768px, md 992px, lg 1500px
 
 $textsize: lg 2rem, md 1rem, sm .75rem
 $textalign: center, left, right, justify
