--- a/src/color.sass
+++ b/src/color.sass
@@ -1,45 +1,40 @@
-@import './variables.sass'
-
 .bg-primary
-  background: $primary
+  background: $primary !important
 
 .bg-success
-  background: $success
+  background: $success !important
 
 .bg-warning
-  background: $warning
+  background: $warning !important
 
 .bg-danger
-  background: $danger
+  background: $danger !important
 
 .bg-default
-  background: $default
+  background: $default !important
 
 @each $name, $color in $colors
   .bg#{$name}
-    background: $color
+    background: $color !important
 
 .text-white
-  color: white
+  color: white !important
 
 .text-primary
-  color: $primary
+  color: $primary !important
 
 .text-success
-  color: $success
+  color: $success !important
 
 .text-warning
-  color: $warning
+  color: $warning !important
 
 .text-danger
-  color: $danger
+  color: $danger !important
 
 .text-default
-  color: $default
-
-.text-black
-  color: #111111
+  color: $default !important
 
 @each $name, $color in $colors
   .text#{$name}
-    color: $color
+    color: $color !important
