DRY import variables

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,9 +1,11 @@
+@import './variables'
 @import './font'
 @import './color'
 @import './spacing'
 @import './grid'
 
 @import './components/button'
+@import './components/navbar'
 
 @import './helpers/text'
 
