--- a/src/components/navbar.sass
+++ b/src/components/navbar.sass
@@ -4,7 +4,10 @@
   .navbar-brand
     cursor: pointer
     display: inline-block
-    padding: .75rem
+    padding: .2rem
+
+    img
+      width: 2.5em
 
   .navbar-menu
     float: right
@@ -13,7 +16,7 @@
     li
       list-style: none
       display: inline-block
-      padding: .75rem
+      padding: 1em
 
       a
         cursor: pointer
