Navbar menu link

--- a/src/components/navbar.sass
+++ b/src/components/navbar.sass
@@ -20,6 +20,7 @@
 
       a
         cursor: pointer
+        text-decoration: none
     
     li:hover
       background: #eee
@@ -49,3 +50,6 @@
   .navbar-menu
     li:hover
       background: #222
+    li
+      a
+        color: white
