--- a/src/spacing.sass
+++ b/src/spacing.sass
@@ -1,11 +1,31 @@
 // PADDING
-@for $i from 1 through 5
+@for $i from 0 through 5
   @each $type, $direction in $paddingtype
     .#{$type}#{$i}
       padding#{$direction}: percentage($i/100)
 
+@for $i from 0 through 5
+  .px-#{$i}
+    padding-left: percentage($i/100) !important
+    padding-right: percentage($i/100) !important
+
+@for $i from 0 through 5
+  .py-#{$i}
+    padding-top: percentage($i/100) !important
+    padding-bottom: percentage($i/100) !important
+
 // MARGIN
-@for $i from 1 through 5
+@for $i from 0 through 5
   @each $type, $direction in $margintype
     .#{$type}#{$i}
       margin#{$direction}: percentage($i/100)
+
+@for $i from 0 through 5
+  .mx-#{$i}
+    margin-left: percentage($i/100) !important
+    margin-right: percentage($i/100) !important
+
+@for $i from 0 through 5
+  .my-#{$i}
+    margin-top: percentage($i/100) !important
+    margin-bottom: percentage($i/100) !important
