--- a/src/index.sass
+++ b/src/index.sass
@@ -7,6 +7,7 @@
 @import './components/button'
 @import './components/navbar'
 @import './components/panel'
+@import './components/input'
 
 @import './helpers/text'
 
