--- a/src/components/input.sass
+++ b/src/components/input.sass
@@ -1,7 +1,9 @@
-input
+input,
+select
   width: 100%
   padding: 10px
   font-size: 1em
   border-radius: 5px
   border: none
   outline: none
+  background: white
