Change navbar fixed to fixed top

--- a/src/components/navbar.sass
+++ b/src/components/navbar.sass
@@ -41,7 +41,7 @@
     @media (max-width: 400px)
       display: inline-block
 
-.navbar-fixed
+.fixed-top
   position: fixed
   top: 0
   width: 100%
