--- a/src/index.sass
+++ b/src/index.sass
@@ -6,6 +6,7 @@
 
 @import './components/button'
 @import './components/navbar'
+@import './components/sidenavbar'
 @import './components/panel'
 @import './components/input'
 
