--- a/src/components/button.sass
+++ b/src/components/button.sass
@@ -2,11 +2,11 @@ button
   border: none
   padding: 7.5px
   border-radius: 5px
-  box-shadow: 0px 0px 2.5px black
+  box-shadow: 0px 2px 2.5px rgba(0,0,0,.14)
   outline: none
   
 button:hover
-  box-shadow: 0px 0px 5px black
+  box-shadow: 0px 2px 3px rgba(0,0,0,.5)
   cursor: pointer
 
 button.sm
