--- a/src/components/button.sass
+++ b/src/components/button.sass
@@ -2,12 +2,16 @@ button
   border: none
   padding: 7.5px
   border-radius: 5px
-  box-shadow: 0px 2px 2.5px rgba(0,0,0,.14)
+  box-shadow: 0px 3px 2.5px rgba(0,0,0,.14)
   outline: none
   
 button:hover
-  box-shadow: 0px 2px 3px rgba(0,0,0,.5)
+  box-shadow: 0px 3px 5px rgba(0,0,0,.3)
   cursor: pointer
+
+button.click
+  box-shadow: 0px 0px 2.5px rgba(0,0,0,.05)
+  transform: translate(1px)
 
 button.sm
   padding: .25rem
